--- a/social_network/Dockerfile
+++ b/social_network/Dockerfile
@@ -10,4 +10,4 @@ COPY . /social_network
 
 EXPOSE 8000
 
-CMD [ "python", "-u", "/social_network/manage.py", "runserver"]
+CMD [ "python", "-u", "/social_network/manage.py", "runserver", "0.0.0.0:8000"]
