add Dockerfile for postgre and connet django to postgre

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
+# MAIN DB 
 POSTGRES_MAIN_DB_HOST_NAME=project-main_pg_db
 POSTGRES_MAIN_DB_PASSWORD=secret_postgres_password123
+POSTGRES_MAIN_DB_PORT=5432
+
+# DJANGO
+BACKEND_APP_PORT = 8000
+SOCIAL_NETWORK_DB_NAME = social_network_db
+SOCIAL_NETWORK_USER = social_network_user
+SOCIAL_NETWORK_USER_PASSWORD = social_network_user_password123
