--- a/social_network/Dockerfile
+++ b/social_network/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.11.2-alpine
 
+ARG PORT
+
 WORKDIR /social_network
 
 COPY /requirements.txt /social_network
@@ -8,6 +10,4 @@ RUN pip install --no-cache-dir --upgrade -r /social_network/requirements.txt
 
 COPY . /social_network
 
-EXPOSE 8000
-
-CMD [ "python", "-u", "/social_network/manage.py", "runserver", "0.0.0.0:8000"]
+EXPOSE ${PORT}
